# cru_to_cmr

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
analyses/: HealeyKahana2014_cru_to_cmr_Model_Comparison.ipynb  Logan2021_cru_to_cmr_Model_Comparison.ipynb  check_unused.py  factorial_comparison.py  figure_paths.md  rename_figures.py  render_free_recall.ipynb  render_parameter_shifting.ipynb  render_serial_recall.ipynb  serial_factorial_comparison.py
analyses/rendered/: fitting_Gordon2021_BaseCMR+Confusable_Fitting.ipynb  fitting_Gordon2021_BaseCMR_with_ContextTerm+Confusable_Fitting.ipynb  fitting_Gordon2021_BaseCRU+Confusable_Fitting.ipynb  fitting_Gordon2021_BaseCRU_with_ContextTerm+Confusable_Fitting.ipynb  fitting_Gordon2021_CRU_with_Feature-to-Context,_Pre-Expt,_Primacy,_and_StartDrift+Confusable_Fitting.ipynb  (+78 more)
cru_to_cmr/: config.py  confusable_likelihood.py  confusable_simulation.py  fitting.py  helpers.py  math.py  plotting.py  repetition.py  simulation.py  state_analysis.py  summarize.py  typing.py
cru_to_cmr/analyses/: crp.py  (+2 more)
docs/: index.html
figures/: figbestserialerrors.md  figcmr.md  figfitlagcrp.md  figfreetermination.md  figinitiation.md  figserialcrp.md  figserialsrac.md
manuscript/: _quarto.yml  figbestserialerrors.md  figcmr.md  figfitlagcrp.md  figfreetermination.md  figinitiation.md  figserialcrp.md  figserialsrac.md  figshiftlearning.md  figshiftstart.md
notes/: comments.md  cru_to_cmr_absorption.md  debugging.md  figure_pipeline.md  slurm_guide.md  structured-roaming-honey.md  transfer.md
scripts/: check_unused.py
(+15 files in other folders)
