[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cru_to_cmr"
version = "0.1.0"
description = "CRU-to-CMR factorial model comparison"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "numba>=0.61.0",
    "scipy==1.15.0",
    "simple-pytree>=0.2.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "matplotlib",
    "numpy",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "papermill>=2.6.0",
    "ipykernel>=6.29.0",
    "vulture>=2.14",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cru_to_cmr"]
